--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -732,6 +732,11 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:px-8{
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
   .lg\:text-xl{
     font-size: 1.25rem;
     line-height: 1.75rem;
