--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -613,28 +613,24 @@ video {
   max-width: 1280px;
 }
 
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .justify-center{
   justify-content: center;
 }
 
-.gap-3{
-  gap: 0.75rem;
+.gap-2{
+  gap: 0.5rem;
 }
 
 .gap-1{
   gap: 0.25rem;
 }
 
-.overflow-hidden{
-  overflow: hidden;
+.gap-3{
+  gap: 0.75rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
+.overflow-hidden{
+  overflow: hidden;
 }
 
 .rounded-lg{
@@ -732,6 +728,14 @@ video {
 }
 
 @media (min-width: 1024px){
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:gap-3{
+    gap: 0.75rem;
+  }
+
   .lg\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
