--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -671,13 +671,17 @@ video {
   padding-right: 0.25rem;
 }
 
+.text-center{
+  text-align: center;
+}
+
 .font-vcr{
   font-family: 'VCR OSD Mono', sans-serif;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-5xl{
+  font-size: 3rem;
+  line-height: 1;
 }
 
 .uppercase{
