--- a/public/css/video.css
+++ b/public/css/video.css
@@ -18,11 +18,11 @@ video#bgVideo {
   .strike::after {
     content: ' ';
     position: absolute;
-    top: 45%;
+    top: 55%;
     left: 0;
     width: 100%;
     height: 4px;
-    background: white;
+    background: black;
     animation-name: strike;
     animation-duration: 10s;
     animation-timing-function: linear;
